Fixed color contrast errors and margins.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -141,27 +141,28 @@ nav a {
         border-radius: 5px;
 }
 
-h2, figure {
+figure {
         margin: 0;
-        padding: 0;
+        padding: .3rem;
         box-sizing: border-box;
-        font-family: sigmar one, static;
-        color: var(--primary-color);
+        font-family: kanit, static;
+        color: var(--accent-color-2);
 } 
 
 .adventure-section {
         display: grid;
         max-width: 100%;
-        padding: 20px;
+        padding: 30px;
         background-color: var(--accent-color-2);
-        border-top: 4px solid var(--accent-color-1);
-        
+        border-top: 5px solid var(--accent-color-1);
 }
 
 .adventure-section h2 {
-        margin-bottom: 20pxl;
+        margin: 3px;
         text-align: center;
-        font-size: 2rem;
+        font-size: 2.5rem;
+        font-family: sigmar one, static;
+        color: var(--secondary-color);
 }
 
  .image-grid {
